# stm32_rust_playground

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs
src/tasks/: blink.rs  button.rs  led_display.rs  mod.rs  ultrasonic_ranger.rs
