[package]
name = "stm32_test"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

#embassy-stm32 = { version = "0.4.0", features = ["defmt", "stm32f429zi", "memory-x"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
