[package]
name = "stm32_test"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-stm32 = { version = "0.4.0", features = ["defmt", "stm32f446re", "unstable-pac", "memory-x", "time-driver-any", "exti"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-sync = { version = "0.7.2", features = ["defmt"]}

tm1637-embedded-hal = "0.5.1"
hcsr04_async = { version = "0.4.0", features = ["blocking_trigger"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

[patch.crates-io]
# Redirect all requests for this crate to your fork
hcsr04_async = { git = "https://github.com/torbeeen/hcsr04_async.git" }

[profile.release]
debug = 2
codegen-units = 1
lto = "fat"
opt-level = 'z'